# pm2-rust

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app.js  build.sh  docker-compose.yml
examples/: README.md
examples/config/: README.md  app.yaml  cluster.yaml  ecosystem.yaml
examples/go-server/: main.go
examples/node-server/: app.js
examples/python-server/: app.py
src/: main.rs
src/cli/: commands.rs  display.rs  mod.rs
src/config/: mod.rs  parser.rs  tests.rs
src/daemon/: mod.rs  server.rs
src/log/: mod.rs  rotator.rs  tests.rs
src/process/: manager.rs  mod.rs  state.rs  state_tests.rs  tests.rs
