[package]
name = "pm2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
signal-hook = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
tabled = "0.14"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.5"
colored = "2.1"

[[bin]]
name = "pm2"
path = "src/main.rs"
